moment when everything is working